--- a/litellm_config.yaml
+++ b/litellm_config.yaml
@@ -2,15 +2,12 @@ general_settings:
   database_connection_pool_limit: 20
 
 model_list:
-  - model_name: fake-openai-endpoint
+  - model_name: "*"             # all requests where model not in your config go to this deployment
     litellm_params:
-      model: openai/my-fake-model
-      api_key: my-fake-key
-      api_base: https://exampleopenaiendpoint-production.up.railway.app/
+      model: openai/*           # set `openai/` to use the openai route
+      api_key: os.environ/OPENAI_API_KEY
 
 litellm_settings:
   drop_params: True
-  success_callback: ["prometheus"]
-  failure_callback: ["prometheus"]
-  service_callback: ["prometheus_system"]
+  success_callback: ["langfuse"]
 
